--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -40,7 +40,6 @@ h6 {
     font-weight: 600;
     border-left: 3px solid #cda45e;
     letter-spacing: 1px;
-    /* text-transform: uppercase; */
     font-family: "Poppins", sans-serif;
 }
 
@@ -720,4 +719,5 @@ section {
 
 #footer .copyright span {
     color: #cda45e;
+    opacity: 0.8;
 }
