--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,17 +3,14 @@ body {
     background: #0c0b09;
     color: #fff;
 }
-
 a {
     color: #cda45e;
     text-decoration: none;
 }
-
 a:hover {
     color: #d9ba85;
     text-decoration: none;
 }
-
 h1,
 h2,
 h3,
@@ -22,16 +19,36 @@ h5,
 h6 {
     font-family: "Playfair Display", serif;
 }
-
+#topbar {
+    height: 40px;
+    transition: all 0.5s;
+    position: absolute;
+    z-index: 996;
+    width: 100%;
+}
+#topbar a {
+    margin-right: 15px;
+}
+#topbar i {
+    color: #d9ba85;
+}
+#topbar a span {
+    padding-left: 5px;
+    color: #fff;
+}
 #header {
     background: rgba(12, 11, 9, 0.6);
     border-bottom: 1px solid rgba(12, 11, 9, 0.6);
     transition: all 0.5s;
     z-index: 997;
     padding: 15px 0;
-    top: 0;
+    top: 40px;
 }
-
+#header.header-scrolled {
+    top: 0;
+    background: rgba(0, 0, 0, 0.85);
+    border-bottom: 1px solid #37332a;
+}
 #header .logo {
     font-size: 28px;
     margin: 0;
@@ -42,22 +59,18 @@ h6 {
     letter-spacing: 1px;
     font-family: "Poppins", sans-serif;
 }
-
 #header .logo a {
     color: #fff;
 }
-
 @media (max-width: 500px) {
     #header h1 a {
         font-size: 18px;
     }
 }
-
 .navbar {
     padding: 0;
     background-color: transparent !important;
 }
-
 .navbar ul {
     margin: 0;
     padding: 0;
@@ -65,11 +78,9 @@ h6 {
     list-style: none;
     align-items: center;
 }
-
 .navbar li {
     position: relative;
 }
-
 .navbar a,
 .navbar a:focus {
     display: flex;
@@ -81,21 +92,18 @@ h6 {
     transition: 0.3s;
     font-size: 14px;
 }
-
 .navbar a i,
 .navbar a:focus i {
     font-size: 12px;
     line-height: 0;
     margin-left: 5px;
 }
-
 .navbar a:hover,
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
     color: #d9ba85 !important;
 }
-
 @media (max-width: 992px) {
     .navbar {
         justify-content: flex-end;
@@ -110,7 +118,6 @@ h6 {
         align-items: flex-end;
     }
 }
-
 #back-to-top {
     position: fixed;
     visibility: hidden;
@@ -124,27 +131,22 @@ h6 {
     transition: all 0.4s;
     border: 2px solid #cda45e;
 }
-
 #back-to-top i {
     font-size: 28px;
     color: #cda45e;
     line-height: 0;
 }
-
 #back-to-top:hover {
     background: #cda45e;
     color: #1a1814;
 }
-
 #back-to-top:hover i {
     color: #444444;
 }
-
 #back-to-top.active {
     visibility: visible;
     opacity: 1;
 }
-
 #header .send-message-btn {
     margin: 0 0 0 15px;
     border: 2px solid #cda45e;
@@ -157,18 +159,15 @@ h6 {
     letter-spacing: 1px;
     transition: 0.3s;
 }
-
 #header .send-message-btn:hover {
     background: #cda45e;
     color: #fff;
 }
-
 @media (max-width: 992px) {
     #header .send-message-btn {
         display: none;
     }
 }
-
 #home {
     width: 100%;
     height: 100vh;
@@ -178,7 +177,6 @@ h6 {
     position: relative;
     padding: 0;
 }
-
 #home:before {
     content: "";
     background: rgba(0, 0, 0, 0.5);
@@ -188,11 +186,9 @@ h6 {
     left: 0;
     right: 0;
 }
-
 #home .container {
     padding-top: 110px;
 }
-
 @media (max-width: 992px) {
     #home .container {
         padding-top: 98px;
@@ -204,7 +200,6 @@ h6 {
         text-align: center;
     }
 }
-
 #home-title {
     margin: 0;
     font-size: 44px;
@@ -213,21 +208,17 @@ h6 {
     color: #fff;
     font-family: "Poppins", sans-serif;
 }
-
 #title-span {
     color: #cda45e;
 }
-
 #subtitle {
     color: #eee;
     margin-bottom: 10px 0 0 0;
     font-size: 22px;
 }
-
 #home .btns {
     margin-top: 30px;
 }
-
 #home .product-btn,
 #home .send-message-btn {
     font-weight: 600;
@@ -242,17 +233,14 @@ h6 {
     color: white;
     border: 2px solid #cda45e;
 }
-
 #home .send-message-btn {
     margin-left: 15px;
 }
-
 #home .product-btn:hover,
 #home .send-message-btn:hover {
     background: #cda45e;
     color: #fff;
 }
-
 #home .play-btn {
     width: 94px;
     height: 94px;
@@ -262,7 +250,6 @@ h6 {
     position: relative;
     overflow: hidden;
 }
-
 #home .play-btn::after {
     content: "";
     position: absolute;
@@ -277,7 +264,6 @@ h6 {
     z-index: 100;
     transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
-
 #home .play-btn::before {
     content: "";
     position: absolute;
@@ -295,12 +281,10 @@ h6 {
     left: -15%;
     background: rgba(198, 16, 0, 0);
 }
-
 #home .play-btn:hover::after {
     border-left: 15px solid #cda45e;
     transform: scale(20);
 }
-
 #home .play-btn:hover::before {
     content: "";
     position: absolute;
@@ -317,7 +301,6 @@ h6 {
     animation: none;
     border-radius: 0;
 }
-
 .video {
     display: none;
     position: fixed;
@@ -329,7 +312,6 @@ h6 {
     overflow: auto;
     background: #0c0b09;
 }
-
 .video-content {
     position: relative;
     background: transparent;
@@ -341,7 +323,6 @@ h6 {
     top: 50%;
     transform: translateY(-50%);
 }
-
 .close {
     color: white;
     position: absolute;
@@ -350,27 +331,23 @@ h6 {
     font-size: 35px;
     font-weight: bold;
 }
-
 .close:hover,
 .close:focus {
     color: #999;
     text-decoration: none;
     cursor: pointer;
 }
-
 @media (max-width: 600px) {
     video {
         width: 60%;
         height: auto;
     }
 }
-
 @media (max-width: 992px) {
     #home .play-btn {
         margin-top: 30px;
     }
 }
-
 @media (max-height: 500px) {
     #home {
         height: auto;
@@ -381,7 +358,6 @@ h6 {
         padding-bottom: 60px;
     }
 }
-
 @media (max-width: 768px) {
     #home h1 {
         font-size: 28px;
@@ -393,7 +369,6 @@ h6 {
         line-height: 24px;
     }
 }
-
 @media (max-width: 392px) {
     #home span {
         display: block;
@@ -410,16 +385,13 @@ h6 {
         margin-top: 15px;
     }
 }
-
 section {
     padding: 60px 0;
     overflow: hidden;
 }
-
 .section-title {
     padding-bottom: 40px;
 }
-
 .section-title h2 {
     font-size: 14px;
     font-weight: 500;
@@ -431,7 +403,6 @@ section {
     color: #aaaaaa;
     font-family: "Poppins", sans-serif;
 }
-
 .section-title h2::after {
     content: "";
     width: 120px;
@@ -440,7 +411,6 @@ section {
     background: rgba(255, 255, 255, 0.2);
     margin: 4px 10px;
 }
-
 .section-title p {
     padding: 0;
     margin: 0;
@@ -449,7 +419,6 @@ section {
     font-family: "Playfair Display", serif;
     color: #cda45e;
 }
-
 #about {
     padding-top: 110px;
     background: url("../img/about.jpg") center center;
@@ -458,7 +427,6 @@ section {
     position: relative;
     z-index: 1;
 }
-
 #about:before {
     content: "";
     background: rgba(0, 0, 0, 0.8);
@@ -469,42 +437,34 @@ section {
     right: 0;
     z-index: -1;
 }
-
 #about-content h3 {
     font-weight: 600;
     font-size: 38px;
 }
-
 #about-content ul {
     list-style: none;
     padding: 0;
 }
-
 #about-content ul li {
     line-height: 2;
 }
-
 #about-content ul i {
     font-size: 20px;
     padding-right: 4px;
     color: #cda45e;
 }
-
 #about-img {
     margin: auto;
     padding: 0;
     transition: all 0.5s ease-in-out;
 }
-
 #about-img img {
     margin: auto;
     max-width: 100%;
 }
-
 #about-img:hover {
     transform: scale(1.1);
 }
-
 @media (max-width: 992px) {
     #about .container {
         padding: 20px 12px;
@@ -518,23 +478,19 @@ section {
         transform: none !important;
     }
 }
-
 #products {
     padding-top: 80px;
 }
-
 .product-item {
     overflow: hidden;
     border-right: 3px solid #454035;
     border-bottom: 3px solid #454035;
 }
-
 .carousel-control-next-icon,
 .carousel-control-prev-icon {
     width: 2.5rem;
     height: 2.5rem;
 }
-
 .product-item>img,
 .carousel-item>img {
     min-width: 100%;
@@ -543,48 +499,40 @@ section {
     background: #DDDDDD;
     transition: all ease-in-out 0.4s;
 }
-
 .product-item>img:hover {
     transform: scale(1.1);
     box-shadow: 0 8px 8px -4px
 }
-
 @media (min-width: 600px) and (max-width:768px) {
     #products img {
         height: 400px;
     }
 }
-
 @media (max-width:600px) {
     #products img {
         width: 100%;
         height: 300px;
     }
 }
-
 #contact {
     background-color: #0c0b09;
     padding-top: 80px;
 }
-
 .mapouter {
     position: relative;
     text-align: right;
     height: 400px;
     width: 100%;
 }
-
 .gmap_canvas {
     overflow: hidden;
     background: none !important;
     height: 100%;
     width: 100%;
 }
-
 #contact .info {
     width: 100%;
 }
-
 #contact .info i {
     font-size: 20px;
     float: left;
@@ -597,7 +545,6 @@ section {
     border-radius: 50px;
     transition: all 0.3s ease-in-out;
 }
-
 #contact .info h4 {
     padding: 0 0 0 60px;
     font-size: 18px;
@@ -605,30 +552,23 @@ section {
     margin-bottom: 5px;
     font-family: "Poppins", sans-serif;
 }
-
-
 #contact .info p {
     padding: 0 0 0 60px;
     margin-bottom: 0;
     font-size: 14px;
     color: #bab3a6;
 }
-
 #contact .info .open-hours,
 #contact .info .email,
 #contact .info .phone {
     margin-top: 40px;
 }
-
 #contact .email-form {
     width: 100%;
 }
-
 #contact .email-form .form-group {
     padding-bottom: 8px;
 }
-
-
 #contact .email-form input,
 #contact .email-form textarea {
     border-radius: 0;
@@ -638,20 +578,16 @@ section {
     border-color: #625b4b;
     color: white;
 }
-
 #contact .email-form input:focus,
 #contact .email-form textarea:focus {
     border-color: #cda45e;
 }
-
 #contact .email-form input {
     height: 44px;
 }
-
 #contact textarea {
     padding: 10px 12px;
 }
-
 #contact .email-form button[type=submit] {
     background: #cda45e;
     border: 0;
@@ -661,7 +597,6 @@ section {
     border-radius: 50px;
     transition: 0.3s;
 }
-
 #contact #form .error-message {
     display: none;
     color: #fff;
@@ -670,7 +605,6 @@ section {
     padding: 15px;
     font-weight: 600;
 }
-
 #contact #form .sent-message {
     display: none;
     color: #fff;
@@ -679,11 +613,9 @@ section {
     padding: 15px;
     font-weight: 600;
 }
-
 #contact .email-form button[type=submit]:hover {
     background: #d3af71;
 }
-
 #footer {
     background: black;
     padding: 0 0 30px 0;
@@ -691,32 +623,11 @@ section {
     font-size: 14px;
     border-top: 1px solid #37332a
 }
-
-#footer .social-links a {
-    font-size: 18px;
-    background: #28251f;
-    color: #fff;
-    line-height: 1;
-    padding: 8px 0;
-    border-radius: 50%;
-    text-align: center;
-    width: 36px;
-    height: 36px;
-    transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-    background: #cda45e;
-    color: #fff;
-    text-decoration: none;
-}
-
 #footer .copyright {
     text-align: center;
-    padding-top: 15px;
+    padding-top: 30px;
 
 }
-
 #footer .copyright span {
     color: #cda45e;
     opacity: 0.8;
